internal/builder/testdata/single/host/advanced/wildcard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wildcard-host-demo
  annotations:
    bfe.ingress.kubernetes.io/router.header: "key: value"
spec:
  rules:
    - host: '*.example.host.com'
      http:
        paths:
          - path: /foo
            pathType: Exact
            backend:
              serviceName: service1
              servicePort: 80
